fix hero header visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -405,7 +405,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
+  /*height: 100vh;*/
   position: relative;
   background: url("../img/hero-bg.jpg") top center;
   background-size: cover;
@@ -423,7 +423,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .container {
-  padding-top: 80px;
+  padding-top: 10px;
 }
 
 #hero h1 {
